# compush

./: .gitignore  CMakeLists.txt  Justfile  arr.npy  estest.cpp  estest.glsl  gl.cpp  gl.hpp  knn.cpp  knn.glsl  knn.py  raytrace.cpp  raytrace.glsl  util.cpp  util.hpp
